lOverlap and lAnchorage fixes, minor visuals

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     .appbar {
       background-color: #1976d2; /* koyu mavi-gri ton */
       color: #fff;
-      padding: 15px 20px;
+	  padding-top: 2%;
       text-align: center;
       position: fixed;
       top: 0;
@@ -71,14 +71,19 @@
     font-size: 18px;
     color: inherit;
   }
-  .tabs {
-    display: flex;
-    margin-top: 20px;
-    border-bottom: 2px solid #ccc;
-  }
+.tabs {
+  display: flex;
+  margin-top: 20px; /* AppBar ile arasında boşluk */
+  border-bottom: 2px solid #ccc;
+  padding: 0 10px; /* sağ ve sol padding */
+  max-width: 100%;
+  box-sizing: border-box;
+  border-color: #1976d2;
+}
 
 .tab {
   flex: 1;
+  min-width: 0; /* taşmayı engeller */
   padding: 10px;
   text-align: center;
   cursor: pointer;
@@ -87,10 +92,9 @@
   border-bottom: none;
   color: #fff;
 
-  /* Dikey ve yatay ortalama için */
   display: flex;
-  align-items: center;   /* Dikey ortala */
-  justify-content: center; /* Yatay ortala */
+  align-items: center;
+  justify-content: center;
 }
 
 .tab.active {
@@ -113,6 +117,12 @@
   display: block;
 }
 
+.tab-underline {
+  height: 8px;
+  background-color: #1976d2;
+  width: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #121212;
@@ -120,7 +130,7 @@
   }
 
   .tab {
-    background: #333;
+    background: #798791;
     border-color: #555;
     color: #ccc;
 
@@ -130,7 +140,7 @@
   }
 
   .tab.active {
-    background: #1e1e1e;
+    background: #286270;
     border-color: #777;
     color: #fff;
 
